# klickbricks

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/klickbrick/: cli.py
tests/: test_cli.py
